force-app/main/default/objects/simpli_lv__List_View__c/simpli_lv__List_View__c.object-meta.xml
<CustomObject>
    <label>List View</label>
    <nameField>
        <displayFormat>LV-{0}</displayFormat>
        <label>Core List View Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>List Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>