force-app/main/default/objects/simpli_lv__List_View__c/fields/simpli_lv__All_Internal_Users__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__All_Internal_Users__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Internal Users</label>
    <type>Checkbox</type>
</CustomField>