force-app/main/default/objects/simpli_lv__List_View__c/fields/simpli_lv__API_Name__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__API_Name__c</fullName>
    <label>API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>