force-app/main/default/objects/simpli_lv__List_View__c/fields/simpli_lv__Boolean_Filter__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Boolean_Filter__c</fullName>
    <description>This field represents an Advanced Option for a filter. Advanced Options in filters allow you to build up filtering conditions that use a mixture of AND and OR boolean operators across multiple filter line items. For example, (1 AND 2) OR 3 finds records that match both the first two filter line items or the third.</description>
    <inlineHelpText>This field represents an Advanced Option for a filter. Advanced Options in filters allow you to build up filtering conditions that use a mixture of AND and OR boolean operators across multiple filter line items. For example, (1 AND 2) OR 3 etc.</inlineHelpText>
    <label>Boolean Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>