force-app/main/default/objects/simpli_lv__List_View__c/fields/simpli_lv__Core_ListView_Columns__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Core_ListView_Columns__c</fullName>
    <description>For core SFDC list views this contains the column data created by the SFDC platform when a list view is created. For manual list views the column data is supplied by the list view creator.</description>
    <inlineHelpText>For core SFDC list views this contains the column data created by the SFDC platform when a list view is created. For manual list views the column data is supplied by the list view creator.</inlineHelpText>
    <label>ListView Columns</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>