force-app/main/default/objects/simpli_lv__List_View__c/fields/simpli_lv__Core_ListView_Id__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Core_ListView_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Holds the standard SFDC list view Id from which the list view data is retrieved.</description>
    <externalId>true</externalId>
    <inlineHelpText>Holds the standard SFDC list view Id from which the list view data is retrieved.</inlineHelpText>
    <label>ListView Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>