force-app/main/default/objects/simpli_lv__List_View__c/fields/simpli_lv__Core_ListView_Query__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Core_ListView_Query__c</fullName>
    <description>For CORE list views this contains the query provided by the core Salesforce list view. For MANUAL list views the query must be supplied. For TOOLING or METADATA list views this is not required.</description>
    <inlineHelpText>For CORE list views this contains the query provided by the core Salesforce list view. For MANUAL list views the query must be supplied. For TOOLING or METADATA list views this is not required.</inlineHelpText>
    <label>ListView Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>