force-app/main/default/objects/simpli_lv__List_View__c/fields/simpli_lv__Custom_Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Custom_Apex_Class__c</fullName>
    <description>Holds the apex class which is used to handle list view processing. This class must be extended from ListViewCustomAbstract</description>
    <inlineHelpText>Holds the apex class which is used to handle list view processing. This class must be extended from ListViewCustomAbstract</inlineHelpText>
    <label>Custom Apex Class</label>
    <length>200</length>
    <type>Text</type>
</CustomField>