force-app/main/default/objects/simpli_lv__List_View__c/fields/simpli_lv__Default_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Default_Sort_Order__c</fullName>
    <label>Default Sort Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>