force-app/main/default/objects/simpli_lv__List_View__c/fields/simpli_lv__Describe__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Describe__c</fullName>
    <label>Describe</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>