force-app/main/default/objects/simpli_lv__List_View__c/fields/simpli_lv__Filter_Scope__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Filter_Scope__c</fullName>
    <description>This field indicates whether you are filtering by owner or viewing all records.

Everything - All records, for example All Opportunities.
Mine - Records owned by the user running the list view, for example My Opportunities.
MineAndMyGroups - Records owned by the user running the list view, and records assigned to the user’s queues.
Queue - Records assigned to a queue.
Delegated - Records delegated to another user for action: for example, a delegated task.
MyTerritory - Records in the territory of the user seeing the list view. This option is available if territory management is enabled for your organization.
MyTeamTerritory - Records in the territory of the team of the user seeing the list view. This option is available if territory management is enabled for your organization.
Team - Records assigned to a team.</description>
    <inlineHelpText>Options are - Everything, Mine, MineAndMyGroups, Queue, Delegated, MyTerritory, MyTeamTerritory, Team</inlineHelpText>
    <label>Filter Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Everything</fullName>
            </value>
            <value>
                <fullName>Mine</fullName>
            </value>
            <value>
                <fullName>MineAndMyGroups</fullName>
            </value>
            <value>
                <fullName>Queue</fullName>
            </value>
            <value>
                <fullName>Delegated</fullName>
            </value>
            <value>
                <fullName>MyTerritory</fullName>
            </value>
            <value>
                <fullName>MyTeamTerritory</fullName>
            </value>
            <value>
                <fullName>Team</fullName>
            </value>
            <value>
                <fullName>SalesTeam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>