force-app/main/default/objects/simpli_lv__List_View__c/fields/simpli_lv__Full_Name__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Full_Name__c</fullName>
    <formula>simpli_lv__Object_Name__c &amp; &quot;.&quot; &amp;  simpli_lv__API_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>