force-app/main/default/objects/simpli_lv__List_View__c/fields/simpli_lv__Is_Non_Editable__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Is_Non_Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Non-Editable</label>
    <type>Checkbox</type>
</CustomField>