force-app/main/default/objects/simpli_lv__List_View__c/fields/simpli_lv__Is_Private__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Is_Private__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the listview has been marked as private by the owner</description>
    <inlineHelpText>Indicates if the listview has been marked as private by the owner</inlineHelpText>
    <label>Is Private</label>
    <type>Checkbox</type>
</CustomField>