force-app/main/default/objects/simpli_lv__List_View__c/fields/simpli_lv__Label__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Label__c</fullName>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>