force-app/main/default/objects/simpli_lv__List_View__c/fields/simpli_lv__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Object_Name__c</fullName>
    <description>Object Name is required for custom manual list views</description>
    <inlineHelpText>Object Name is required for custom manual list views</inlineHelpText>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>