force-app/main/default/objects/simpli_lv__List_View__c/fields/simpli_lv__Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Owner_Name__c</fullName>
    <formula>Owner:User.FirstName &amp; &quot; &quot; &amp;  Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>