force-app/main/default/objects/simpli_lv__List_View__c/fields/simpli_lv__Roles__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Roles__c</fullName>
    <description>A list of roles with sharing access.</description>
    <inlineHelpText>A list of roles with sharing access.</inlineHelpText>
    <label>Roles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>