force-app/main/default/objects/simpli_lv__List_View__c/fields/simpli_lv__Roles_And_Subordinates__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Roles_And_Subordinates__c</fullName>
    <description>A list of roles with sharing access. All roles below each of these roles in the role hierarchy also have sharing access. If portal accounts are enabled, then all roles and portal accounts below each of these roles in the role hierarchy also have sharing access.</description>
    <inlineHelpText>List of roles with sharing access. All roles below these roles in the role hierarchy also have sharing access. If portal accounts are enabled, then all roles and portal accounts below each of these roles in the role hierarchy also have sharing access.</inlineHelpText>
    <label>Roles And Subordinates</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>