force-app/main/default/objects/simpli_lv__List_View__c/fields/simpli_lv__Subtype__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Subtype__c</fullName>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Tooling</fullName>
            </value>
            <value>
                <fullName>Metadata</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>