force-app/main/default/objects/simpli_lv__List_View__c/fields/simpli_lv__Territories__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Territories__c</fullName>
    <description>A list of territories with sharing access.</description>
    <inlineHelpText>A list of territories with sharing access.</inlineHelpText>
    <label>Territories</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>