force-app/main/default/objects/simpli_lv__List_View__c/fields/simpli_lv__Territories_And_Subordinates__c.field-meta.xml
<CustomField>
    <fullName>simpli_lv__Territories_And_Subordinates__c</fullName>
    <description>A list of territories with sharing access. All territories below each of these territories in the territory hierarchy also have sharing access.</description>
    <inlineHelpText>A list of territories with sharing access. All territories below each of these territories in the territory hierarchy also have sharing access.</inlineHelpText>
    <label>Territories And Subordinates</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>