force-app/main/default/objects/simpli_lv__List_View__c/recordTypes/simpli_lv__Core.recordType-meta.xml
<RecordType>
    <fullName>simpli_lv__Core</fullName>
    <active>true</active>
    <description>Holds core SFDC list views. This type should only be created by internal batch processes</description>
    <label>Core</label>
</RecordType>