force-app/main/default/objects/simpli_lv__List_View__c/recordTypes/simpli_lv__Custom.recordType-meta.xml
<RecordType>
    <fullName>simpli_lv__Custom</fullName>
    <active>true</active>
    <description>For all custom list views created outside of the internal processes.</description>
    <label>Custom</label>
</RecordType>