force-app/main/default/objects/simpli_lv__List_View__c/listViews/simpli_lv__All.listView-meta.xml
<ListView>
    <fullName>simpli_lv__All</fullName>
    <columns>simpli_lv__Core_ListView_Id__c</columns>
    <columns>simpli_lv__Custom_Apex_Class__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>simpli_lv__Subtype__c</columns>
    <columns>simpli_lv__Primary_Key__c</columns>
    <columns>simpli_lv__Label__c</columns>
    <columns>simpli_lv__API_Name__c</columns>
    <columns>simpli_lv__Object_Name__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>