force-app/main/default/objects/simpli_lv__List_View__c/listViews/simpli_lv__All_Core.listView-meta.xml
<ListView>
    <fullName>simpli_lv__All_Core</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>simpli_lv__Label__c</columns>
    <columns>simpli_lv__API_Name__c</columns>
    <columns>simpli_lv__Object_Name__c</columns>
    <columns>simpli_lv__Primary_Key__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>simpli_lv__Core_ListView_Id__c</columns>
    <columns>simpli_lv__Core_ListView_Query__c</columns>
    <columns>simpli_lv__Subtype__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>simpli_lv__List_View__c.simpli_lv__Core</value>
    </filters>
    <label>All Core</label>
</ListView>