force-app/main/default/objects/simpli_lv__List_View__c/listViews/simpli_lv__All_Metadata.listView-meta.xml
<ListView>
    <fullName>simpli_lv__All_Metadata</fullName>
    <columns>NAME</columns>
    <columns>simpli_lv__Label__c</columns>
    <columns>simpli_lv__API_Name__c</columns>
    <columns>simpli_lv__Object_Name__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>simpli_lv__Core_ListView_Query__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>simpli_lv__Object_Name__c</field>
        <operation>contains</operation>
        <value>__mdt</value>
    </filters>
    <label>All Metadata</label>
</ListView>